--- a/build
+++ b/build
@@ -7,5 +7,5 @@ for file in src/*.c; do
 	filename=$(basename -- "$file")
 	extension="${filename##*.}"
 	filename="${filename%.*}"
-	clang -c -O3 -o obj/$filename.o $file -I src/headers/
+	clang -c -xc -std=gnu17 -Wall -O3 -o obj/$filename.o $file -I src/headers/
 done
